--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,5 @@ version = "0.1.0"
 authors = ["Thomas Wickham <twickham@octo.com>"]
 
 [dependencies]
-
-[dependencies.nom]
-version = "^2.0"
-features = ["verbose-errors"]
-
+systemd-parser = { version = "0.1.0", path = "./crates/systemd-parser" }
 
