--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ authors = ["Thomas Wickham <twickham@octo.com>"]
 
 [dependencies]
 systemd-parser = { version = "0.1.0", path = "./crates/systemd-parser" }
+clap = "^2.20"
 
