--- a/.travis.yml
+++ b/.travis.yml
@@ -28,11 +28,11 @@ matrix:
     # - env: TARGET=x86_64-unknown-linux-gnu  # this is the default job
     - env: TARGET=x86_64-unknown-linux-musl
 
-    # OSX
-    - env: TARGET=i686-apple-darwin
-      os: osx
-    - env: TARGET=x86_64-apple-darwin
-      os: osx
+      #    # OSX
+      #    - env: TARGET=i686-apple-darwin
+      #      os: osx
+      #    - env: TARGET=x86_64-apple-darwin
+      #      os: osx
 
         #    # *BSD
         #    - env: TARGET=i686-unknown-freebsd DISABLE_TESTS=1
