--- a/crates/systemd-parser/Cargo.toml
+++ b/crates/systemd-parser/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "systemd-parser"
+description = "A nom parser for systemd unit files"
 version = "0.1.0"
 authors = ["Thomas Wickham <twickham@octo.com>"]
+license = "MPL-2.0"
 
 [dependencies]
 
