--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,11 @@ matrix:
     # - env: TARGET=x86_64-unknown-linux-gnu  # this is the default job
     - env: TARGET=x86_64-unknown-linux-musl
 
-#    # OSX
-#    - env: TARGET=i686-apple-darwin
-#      os: osx
-#    - env: TARGET=x86_64-apple-darwin
-#      os: osx
+    # OSX
+    - env: TARGET=i686-apple-darwin
+      os: osx
+    - env: TARGET=x86_64-apple-darwin
+      os: osx
 
 #    # *BSD
 #    - env: TARGET=i686-unknown-freebsd DISABLE_TESTS=1
@@ -44,13 +44,13 @@ matrix:
 #    - env: TARGET=powerpc64-unknown-linux-gnu
 #    - env: TARGET=powerpc64le-unknown-linux-gnu
 #    - env: TARGET=s390x-unknown-linux-gnu DISABLE_TESTS=1
-#
-#    # Testing other channels
-#    - env: TARGET=x86_64-unknown-linux-gnu
-#      rust: nightly
-#    - env: TARGET=x86_64-apple-darwin
-#      os: osx
-#      rust: nightly
+
+    # Testing other channels
+    - env: TARGET=x86_64-unknown-linux-gnu
+      rust: nightly
+    - env: TARGET=x86_64-apple-darwin
+      os: osx
+      rust: nightly
 
 before_install: set -e
 
