--- a/crates/systemd-parser/Cargo.toml
+++ b/crates/systemd-parser/Cargo.toml
@@ -6,9 +6,11 @@ authors = ["Thomas Wickham <twickham@octo.com>"]
 license = "MPL-2.0"
 
 [dependencies]
+quick-error = "^1.1"
 
 [dependencies.nom]
 version = "^2.0"
 features = ["verbose-errors"]
+
 
 
