--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Thomas Wickham <twickham@octo.com>"]
 license = "MPL-2.0"
 
 [dependencies]
-systemd-parser = { version = "0.1.0", path = "./crates/systemd-parser" }
+systemd-parser = { version = "^0.1", path = "./crates/systemd-parser" }
 clap = "^2.20"
 colored = "^1.0"
 
