--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,15 +3,9 @@
 
 environment:
   global:
-  # TODO This is the Rust channel that build jobs will use by default but can be
-  # overridden on a case by case basis down below
     RUST_VERSION: stable
+    CRATE_NAME: systemd-linter
 
-    # TODO Update this to match the name of your project.
-    CRATE_NAME: trust
-
-  # TODO These are all the build jobs. Adjust as necessary. Comment out what you
-  # don't need
   matrix:
     # MinGW
     - TARGET: i686-pc-windows-gnu
@@ -54,7 +48,7 @@ test_script:
 
 before_deploy:
   # TODO Update this to build the artifacts that matter to you
-  - cargo rustc --target %TARGET% --release --bin hello -- -C lto
+  - cargo rustc --target %TARGET% --release --bin systemd-linter -- -C lto
   - ps: ci\before_deploy.ps1
 
 deploy:
@@ -64,13 +58,9 @@ deploy:
   # - Encrypt it. Go to https://ci.appveyor.com/tools/encrypt
   # - Paste the output down here
   auth_token:
-    secure: t3puM/2hOig26EHhAodcZBc61NywF7/PFEpimR6SwGaCiqS07KR5i7iAhSABmBp7
-  description: ''
+    secure: OR9HMLDhs5+lWNGBadN7Cti91RWIvb1To8L1waoDWy18d0oRLvp+9uXdVzV9Pn9L
+  description: 'Systemd-linter'
   on:
-    # TODO Here you can pick which targets will generate binary releases
-    # In this example, there are some targets that are tested using the stable
-    # and nightly channels. This condition makes sure there is only one release
-    # for such targets and that's generated using the stable channel
     RUST_VERSION: stable
     appveyor_repo_tag: true
   provider: GitHub
