--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,8 @@ systemd-parser = { version = "^0.1", path = "./crates/systemd-parser" }
 clap = "^2.20"
 colored = "^1.0"
 rustc-serialize = "^0.3"
+clippy = {version = "*", optional = true}
+
+[features]
+default = []
 
